--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,7 @@
     <string name="verbs">Verbs</string>
     <string name="cards">Cards</string>
     <string name="favorites">Favorites</string>
-    <string name="settings">Settings</string>
+    <string name="share">Share</string>
 
     <string name="select_show_verbs">Show verbs</string>
     <string name="group1">1st group</string>
@@ -45,6 +45,15 @@
     <string name="most_common_500">500 most common</string>
     <string name="most_common_1000">1000 most common</string>
     <string name="all">all</string>
+
+    <string name="definition">Definition</string>
+    <string name="examples">Examples</string>
+    <string name="play">play</string>
+
+    <string name="settings">Settings</string>
+    <string name="details">Details</string>
+    <string name="favorites_add_message">Add to Favorites</string>
+    <string name="favorites_del_message">Remove from Favorites</string>
 
     <!-- error messages -->
     <string name="network_not_available_message">Network is not available!</string>
