Add ColorPicker module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-
+    <string name="select_color">Select color</string>
 
     <!-- Slide menu options -->
     <string name="verbs">Verbs</string>
